# budge

./: .env.example  .env.prod.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.frontend  Makefile  README.md  docker-compose.e2e.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml
backend/: alembic.ini  entrypoint.sh  pyproject.toml  seed.py
backend/alembic/: env.py
backend/alembic/versions/: 0e3d8f7a42d8_add_is_starred_to_envelopes.py  2dc751c1b62f_add_default_income_allocation_to_budgets.py  3056c438361b_rename_team_to_budget.py  30851f39d362_add_recurring_transactions.py  321e1c2010cd_add_cc_envelope_link.py  521e5b39909f_add_allocation_rules_table.py  539ded95b0b8_add_report_indexes.py  66048a2e61bd_remove_user_name_email_fields.py  6667d8b38881_add_notifications_tables.py  67ca3dadd1cc_update_fk_constraints.py  709046d1ea5b_add_transfer_support.py  739661c8319f_add_is_reconciled_to_transactions.py  79f4329bad93_adds_envelope_groups_and_fixes_.py  87143b249b24_add_transactions_pagination_indexes.py  87f476fc8dff_add_envelopes_table.py  892db96021c0_.py  89cb0c3236ab_add_locations.py  8bdf0b8ed34c_add_date_to_allocations.py  90d244dd4c25_.py  974da1cfb2f4_add_allocations_table.py  9a0ebee3c870_add_payees_table.py  9dc3013ee865_add_respect_target_to_allocation_rules.py  a1b2c3d4e5f6_add_envelope_id_to_recurring_transactions.py  a2b3c4d5e6f7_split_account_balance.py  (+15 more)
backend/src/: config.py  database.py  exceptions.py  logging.py  main.py  models.py  pagination.py  rate_limit.py
backend/tests/: conftest.py  utils.py
(+327 files in other folders)
